# toy-helix

./: Cargo.toml  README.md  rustfmt.toml
.helix/: language.toml
examples/: macros.rs  rope.rs
src/: application.rs  config.rs  core.rs  lib.rs  macros.rs  main.rs  term.rs  tui.rs  view.rs
src/core/: chars.rs  doc_formatter.rs  graphemes.rs  line_ending.rs  macros.rs  movement.rs  path.rs  position.rs  selection.rs  syntax.rs  text_annotations.rs
src/term/: args.rs  commands.rs  compositor.rs  keymap.rs  ui.rs
src/term/commands/: typed.rs
src/term/keymap/: default.rs
src/term/ui/: document.rs  editor.rs
src/tui/: backend.rs  buffer.rs  terminal.rs
src/tui/backend/: crossterm.rs
src/view/: document.rs  editor.rs  graphics.rs  input.rs  keyboard.rs  macros.rs  theme.rs  tree.rs  view.rs
