[package]
name = "toy-helix"
version = "0.1.0"
edition = "2021"

[features]
defualt = []

[dependencies]
anyhow = "1.0.68"
bitflags = "1.3.2"
crossterm = { version = "0.25", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
