[package]
name = "toy-helix"
version = "0.1.0"
edition = "2021"

[features]
defualt = []

[dependencies]
anyhow = "1.0.68"
arc-swap = "1.6.0"
bitflags = "1.3.2"
chardetng = "0.1.17"
crossterm = { version = "0.25", features = ["event-stream"] }
encoding_rs = "0.8.32"
etcetera = "0.4.0"
once_cell = "1.17.1"
ropey = { version = "1.6.0", default-features = false, features = ["simd"] }
serde = { version = "1.0", features = ["derive"] }
slotmap = "1.0.6"
smartstring = "1.0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
toml = "0.7.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
unicode-segmentation = "1.10.1"
unicode-width = "0.1.10"
unicode-general-category = "0.6"
signal-hook = "0.3.15"
futures-util = "0.3.28"
smallvec = "1.10"

[target.'cfg(not(windows))'.dependencies]
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
